--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
   font-size: 2rem;
  }
 
- h2 {
+ h3 {
   font-size: 1.5rem;
  }
 
@@ -51,6 +51,7 @@
   max-width: 1180px;
   margin-inline: auto;
   padding-inline:  var(--padding-inline-section);
+  overflow: hidden;
  }
  .flex{
   display: flex;
@@ -70,6 +71,7 @@
     padding: 12px 24px;
     box-shadow: 0 0 2px var(--secondary-text-color);
     transition: 0.2s ease-out;
+    text-align: center;
 
   }
 
@@ -108,6 +110,7 @@
   color: white;
   padding: 15px 30px;
   background-size: inherit;
+  text-align: center;
 
 
 
@@ -116,6 +119,7 @@
  .main-nav {
   margin-top: 20px;
   justify-content: space-between;
+  position: relative;
 
  }
  .company-logo img {
@@ -128,6 +132,10 @@
  .nav-links ul {
   justify-content: end;
   gap: 40px;
+ }
+
+ .nav-toggle {
+  display: none;
  }
 
  header {
@@ -154,7 +162,7 @@
  
 
  .header-right img{
-  width: 600px;
+  width: 100%;
  }
 
  .companies-section {
@@ -163,8 +171,9 @@
   color: var(--primary-text-color);
  }
  .logos {
-  justify-content: space-between;
+  justify-content: space-evenly;
   flex-wrap: wrap;
+  gap: 20px;
  }
 
  .logo {
@@ -181,6 +190,7 @@
 
  .features-header {
   text-align: center;
+  margin-bottom: 40px;
  }
  .features-header-text {
   margin-bottom: 20px;
@@ -190,7 +200,7 @@
  .features-area {
   flex-wrap: wrap;
   justify-content: space-between;
-  gap: 40px;
+  gap: 20px;
   margin-top: 20px;
  }
 
@@ -210,6 +220,10 @@
   gap: 30px;
  }
 
+ #second-big-feature {
+  flex-direction: row-reverse;
+ }
+
  .feature-img img {
   width: 100%;
  }
@@ -218,20 +232,26 @@
   flex-direction: column;
   align-items: flex-start;
  }
+
+ .examples-section {
+  padding: 80px var(--padding-inline-section);
+ }
  .examples-header {
   flex-direction: column;
   gap: 20px;
+  text-align: center;
  }
 
  .examples-area {
   justify-content: space-between;
   margin-block: 30px;
+  flex-wrap: wrap;
  }
 
  .examples-card {
   width: 23%;
   position: relative;
-  min-height: 300px;
+  height: 300px;
   background: black;
   background: linear-gradient(rgb(0, 0, 0, 0.1), rgb(0, 0, 0, 0.8)), url('assets (1)/asset 37.jpeg');
   background-size: cover;
@@ -252,6 +272,7 @@
   flex-direction: column;
   gap: 30px;
   color: white;
+  text-align: center;
  }
 
  .cta-section {
@@ -286,6 +307,9 @@
 .subfooter-container {
   justify-content: center;
   gap: 30px;
+  flex-wrap: wrap;
 }
+
+
 
  
